level4-ingress-hpa/fastapi-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fastapi-allow-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fastapi
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8000
  egress:
  - {}
